kube-manifests/label-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-deployment-team-label
spec:
  validationFailureAction: Audit
  rules:
    - name: require-deployment-team-label
      match:
        resources:
          kinds:
            - Deployment
      validate:
        message: "You should have a label `team` for all deployments"
        pattern:
          metadata:
            labels:
              team: "?*"
