kube-manifests/private-registry.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: private-registry
spec:
  validationFailureAction: Enforce
  rules:
    - name: deny-public-registries
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Unknown image registry"
        pattern:
          spec:
            containers:
              - images: "afeez511/*"
